begin implementing auto-buy functionality

--- a/.env-template
+++ b/.env-template
@@ -2,3 +2,5 @@ PING_GROUP_ID=""
 WEBHOOK_ID=""
 WEBHOOK_TOKEN=""
 WEBHOOK_FULL_URL=""
+PRODUCT_URL="https://www.bestbuy.com/site/nvidia-geforce-rtx-3090-24gb-gddr6x-pci-express-4-0-graphics-card-titanium-and-black/6429434.p?skuId=6429434"
+AUTO_BUY=false
