--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/wikedawsom/nodeifier#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "casperjs": "^1.1.4",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsdom": "^16.5.2",
     "winston": "^3.3.3"
   }
 }
